# rl-human-feedback-llama3.2

./: .gitignore  README.md  pyproject.toml
bot/: bot.py  bot_configs.py  load_model.py
src/configs/: sft_configs.py
src/data/: data_loader.py  preprocessor.py
src/models/: llama_model.py
src/training/: train_sft.py
